PROJECT(OpenGLStudy)

SET(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "add a postfix, usually d on windows")

FIND_PATH( GLUT_INCLUDE_DIR GL/glut.h )
FIND_PATH( GLUT_LIB_DIR glut32.lib )

ADD_SUBDIRECTORY(book253)
ADD_SUBDIRECTORY(book254)
ADD_SUBDIRECTORY(book26)
ADD_SUBDIRECTORY(book3101)
ADD_SUBDIRECTORY(book3102)
ADD_SUBDIRECTORY(book3103)
ADD_SUBDIRECTORY(book34)
ADD_SUBDIRECTORY(book35)
ADD_SUBDIRECTORY(book361)
ADD_SUBDIRECTORY(book362)
ADD_SUBDIRECTORY(book363)
ADD_SUBDIRECTORY(book364)
ADD_SUBDIRECTORY(book381)
ADD_SUBDIRECTORY(book391)
ADD_SUBDIRECTORY(book392)
ADD_SUBDIRECTORY(book431)
ADD_SUBDIRECTORY(book432)
ADD_SUBDIRECTORY(book433)
ADD_SUBDIRECTORY(book47)
ADD_SUBDIRECTORY(book54)
ADD_SUBDIRECTORY(book55)
ADD_SUBDIRECTORY(book510)
ADD_SUBDIRECTORY(book5112)
ADD_SUBDIRECTORY(book611)
ADD_SUBDIRECTORY(book73)
ADD_SUBDIRECTORY(book74)
ADD_SUBDIRECTORY(book75)
ADD_SUBDIRECTORY(book83)
ADD_SUBDIRECTORY(book85)
ADD_SUBDIRECTORY(book86)
ADD_SUBDIRECTORY(book94)
ADD_SUBDIRECTORY(book95)
ADD_SUBDIRECTORY(book101)
ADD_SUBDIRECTORY(book1021)
ADD_SUBDIRECTORY(book1022)
ADD_SUBDIRECTORY(book104)
ADD_SUBDIRECTORY(book111)
ADD_SUBDIRECTORY(book113)
ADD_SUBDIRECTORY(book1141)
ADD_SUBDIRECTORY(book1142)
ADD_SUBDIRECTORY(book1211)
ADD_SUBDIRECTORY(book1212)
ADD_SUBDIRECTORY(book1221)
ADD_SUBDIRECTORY(EarthCoord)
ADD_SUBDIRECTORY(GLTools)

ADD_DEPENDENCIES(book433 GLTools)
ADD_DEPENDENCIES(book47 GLTools)
ADD_DEPENDENCIES(book5112 GLTools)
ADD_DEPENDENCIES(book611 GLTools)
ADD_DEPENDENCIES(book73 GLTools)
ADD_DEPENDENCIES(book74 GLTools)
ADD_DEPENDENCIES(book83 GLTools)
ADD_DEPENDENCIES(book85 GLTools)
ADD_DEPENDENCIES(book86 GLTools)
ADD_DEPENDENCIES(book94 GLTools)
ADD_DEPENDENCIES(book95 GLTools)
ADD_DEPENDENCIES(book104 GLTools)
ADD_DEPENDENCIES(book111 GLTools)
ADD_DEPENDENCIES(book113 GLTools)
ADD_DEPENDENCIES(book1141 GLTools)
ADD_DEPENDENCIES(book1142 GLTools)
ADD_DEPENDENCIES(book1211 GLTools)
ADD_DEPENDENCIES(book1212 GLTools)
